add footer content

--- a/index.html
+++ b/index.html
@@ -353,8 +353,6 @@
                 </ul>
               </div>
             </li>
-
-            
           </ul>
         </div>
       </section>
@@ -549,9 +547,25 @@
             </li>
           </ul>
         </div>
+
+        <div class="side-right-content">
+          <p class="side-right-content__title">Subscribe</p>
+
+          <form action="#" class="form-subscribe">
+            <input
+              class="form-subscribe__input"
+              type="email"
+              placeholder="E-mail"
+            />
+            <button class="form-subscribe__btn" type="submit">
+              Subscribe
+              <svg class="form-subscribe__icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-
-   
   </body>
 </html>
