--- a/index.html
+++ b/index.html
@@ -552,16 +552,21 @@
           <p class="side-right-content__title">Subscribe</p>
 
           <form action="#" class="form-subscribe">
-            <input
+            <label for="" class="form-subscribe__label">
+
+              <input
               class="form-subscribe__input"
               type="email"
               placeholder="E-mail"
               required
               name="subscribe-email"
             />
+
+            </label>
+            
             <button class="form-subscribe__btn" type="submit">
               Subscribe
-              <svg class="form-subscribe__icon" width="24" height="20">
+              <svg class="form-subscribe__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
@@ -570,7 +575,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop ">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-btn__icon" width="8" height="8">
