--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
           <p class="side-right-content__title">Subscribe</p>
 
           <form action="#" class="form-subscribe">
-            <label for="" class="form-subscribe__label">
+            <label for="subscribe-email" class="form-subscribe__label">
 
               <input
               class="form-subscribe__input"
@@ -560,6 +560,7 @@
               placeholder="E-mail"
               required
               name="subscribe-email"
+              id="subscribe-email"
             />
 
             </label>
