--- a/index.html
+++ b/index.html
@@ -660,13 +660,14 @@
           <div class="input-container input-container--flex">
             <input
               type="checkbox"
-              name="policy-checbox"
-              id="policy-checbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
               class="modal-form__checkbox visually-hidden"
             />
 
             <label
-              for="policy-checbox"
+              for="user-privacy"
               class="modal-form__label modal-form__label--appere"
             >
               <span class="review-form-own-checkbox">
